Kubeasz/ingress-nginx/example/06/myapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: learn-ingress
spec:
  selector:
    matchLabels:
      app: myapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v1
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
